Fixed table z-index so table is on top

--- a/styles/style.css
+++ b/styles/style.css
@@ -242,6 +242,7 @@
   justify-content: space-around;
   list-style-type: none;
   margin-bottom: 90px;
+  z-index:1;
 }
 
 /* including elements with key-value modifiers */
@@ -269,7 +270,6 @@
 
 .kaufman__triangle{
   position:absolute;
-  z-index:0;
   right:-124px;
   height: 660px;
   width: 636px;
